# edw-data-control-agent

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  Dockerfile  README.md  activate.sh  conftest.py  deploy.sh  main.py  pyproject.toml  requirements.txt
agents/edw_recovery_agent/: __init__.py  agent.py
config/: agent.yaml
scripts/: provision_bq_readonly_sa.py
src/: __init__.py  agent.py  auth.py  bigquery.py  clients.py  core.py  data_client.py  main.py  recovery.py  settings.py  slack.py
src/edca/: settings.py
src/edca/agent/: agent.py  prompts.py  tools.py
src/edca/client/: auth.py  control_center.py
src/edca/core/: policy.py  runbook.py
src/edca/entrypoints/: cron.py  handler.py
tests/: stubs.py  test_bigquery.py  test_bigquery_live.py  test_data_client.py  test_dev_env.py  test_policy.py  test_runbook.py  test_slack.py
