[project]
name = "edw-data-control-agent"
version = "0.1.0"
description = "Alerting + recovery agent (Google ADK) that consumes the edw-data-control-center freshness API"
requires-python = ">=3.11"
dependencies = [
    "google-adk",         # agent framework
    "litellm",            # lets ADK run Claude models (via LiteLlm wrapper)
    "httpx",              # call the control-center API
    "google-auth",        # mint IAM ID tokens for service-to-service auth
    "pydantic",           # boundary models only
    "pyyaml",             # config
    "fastapi",            # HTTP entrypoint served on Cloud Run
    "uvicorn[standard]",  # ASGI server for the container
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edca"]

[tool.pytest.ini_options]
pythonpath = ["src"]
